--- a/src/styles/radix.css
+++ b/src/styles/radix.css
@@ -1,7 +1,7 @@
-@import '@radix-ui/colors/blackA.css';
+@import '@radix-ui/colors/gray.css';
+@import '@radix-ui/colors/blue.css';
 @import '@radix-ui/colors/green.css';
-@import '@radix-ui/colors/mauve.css';
-@import '@radix-ui/colors/violet.css';
+@import '@radix-ui/colors/red.css';
 
 .TabsRoot {
   display: flex;
@@ -13,7 +13,7 @@
 .TabsList {
   flex-shrink: 0;
   display: flex;
-  border-bottom: 1px solid var(--mauve6);
+  border-bottom: 1px solid var(--blackA4);
 }
 
 .TabsTrigger {
@@ -27,7 +27,7 @@
   justify-content: center;
   font-size: 15px;
   line-height: 1;
-  color: var(--mauve11);
+  color: var(--blackA4);
   user-select: none;
 }
 .TabsTrigger:first-child {
@@ -63,7 +63,7 @@
 .Text {
   margin-top: 0;
   margin-bottom: 20px;
-  color: var(--mauve11);
+  color: var(--blackA4);
   font-size: 15px;
   line-height: 1.5;
 }
